--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_serializable: ^6.5.4
   dio: ^4.0.6
   build_runner: ^2.3.2
+  sqflite: ^2.2.0+3
 
 dev_dependencies:
   flutter_test:
