fixed and added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   dio: ^4.0.6
   build_runner: ^2.3.2
   sqflite: ^2.2.0+3
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  formz: ^0.4.1
+  connectivity_plus: ^2.3.7
 
 dev_dependencies:
   flutter_test:
